# mcp-subtitle

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml  server.py
tests/: test_e2e.py
