[project]
name = "mcp-subtitle"
version = "0.1.0"
description = "MCP server for extracting subtitles from videos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "yt-dlp[default]",
    "mlx-whisper",
]

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=25.12.0",
    "isort>=7.0.0",
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
mcp-subtitle = "server:main"

[tool.uv]
package = true
